Fix personnel card layout issues

--- a/src/scss/_cards.scss
+++ b/src/scss/_cards.scss
@@ -86,11 +86,7 @@
   position: relative;
   margin-top: -100px;
 }
-@media (max-width: 767px) {
-  .gtco-testimonials {
-    margin-top: 20px;
-  }
-}
+
 .gtco-testimonials h2 {
   font-size: 30px;
   text-align: center;
@@ -212,4 +208,32 @@
   max-width: 100%;
   height: 120px;
   width: 120px;
+}
+
+.profile-photo {
+  width: 200px;
+  height: 200px;
+  background-size: cover !important;
+  background-position: center !important;
+  border-radius: 250px;
+}
+
+.personnel-detail {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  max-width: 300px;
+  height: 30px;
+}
+
+@media screen and (max-width:576px) {
+  .personnel-detail {
+    max-width: 230px;
+  }
+}
+
+@media (max-width: 767px) {
+  .gtco-testimonials {
+    margin-top: 20px;
+  }
 }
